# LovelaceCode

./: README.md  pyproject.toml
src/lovelace_code/: activity.py  cli.py  config.py  global_config.py  models.py  onboarding.py  paths.py  prompts.py  ui.py
src/lovelace_code/backends/: __init__.py  anthropic_api.py  base.py  gemini_api.py  groq_api.py  hf_api.py  llama_cpp.py  local_transformers.py  openai_api.py  openai_compatible.py  openrouter_api.py  registry.py  xai_api.py
src/lovelace_code/tools/: __init__.py  base.py  code_tools.py  file_tools.py  git_tools.py  model_tools.py  registry.py  repo_tools.py  shell_tools.py  task_tools.py
